--- a/scss/style.scss
+++ b/scss/style.scss
@@ -136,7 +136,7 @@ margin-right: 7px;
 	background-color: #fff;
 	z-index: 222;
 	right: -102%;
-	transition: 1s;
+	transition: 0.5s;
 	
 	}
 	.nav-modal-position{
@@ -604,7 +604,9 @@ box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
 .modal-choose-city.modal-hidden,
 .bissnes-property.modal-hidden,
 .residental-property.modal-hidden,
-.land-property.modal-hidden{
+.land-property.modal-hidden,
+.property-item-first.modal-hidden
+{
 	display: none;
 }
 .modal-call-back,
@@ -768,15 +770,31 @@ cursor: pointer;
 
 .main-property-conainer{
 	width: 100%;
-	min-height: 872px;
+	margin: 0 auto;
+
 	background: radial-gradient(42.82% 211.01% at 29.11% 38.17%, rgba(0, 225, 212, 0.3) 0%, rgba(0, 9, 95, 0.3) 100%);
+	// background-image: url(..//img/mobile-background.png);
+	background-repeat: no-repeat;
+}
+.property-conainer{
+	min-width: 320px;
+	margin: 0 auto;
+background: url(..//img/mobile-background.png) no-repeat center top fixed;
+-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+     background-size: cover;
+
+background-size: cover;
 }
 .property-title{
+	
 	padding-top: 20px;
 	margin-left: 20px;
 	margin-bottom: 70px;
 }
 .property-title h2{
+	margin: 0 auto;
 	width: 290px;
 	font-style: normal;
 font-weight: bold;
@@ -789,7 +807,8 @@ letter-spacing: -0.02em;
 color: #FFFFFF;
 }
 .property-title p{
-	width: 250px;
+	margin: 0 auto;
+	max-width: 290px;
 	font-style: normal;
 font-weight: 300;
 font-size: 14px;
@@ -813,7 +832,8 @@ min-height: 600px;
 .propery-tab span,
 .type-dials p,
 .type-areas p,
-.type-objects p{
+.type-objects p,
+.type-dials-title p{
 	display: block;
 	width: 290px;
 	height: 50px;
@@ -891,6 +911,12 @@ text-transform: uppercase;
 
 color: #0D0D0D;
 }
+.show-on-map:hover{
+	color: #FF000D;
+}
+.show:hover{
+	color: #000000;
+}
 .show{
 	margin-top: 10px;
 background: #FF000D;
@@ -903,28 +929,70 @@ color: #FFFFFF;
 	outline: none;
 }
 
-.type-dials, .type-areas, .type-objects{
+.type-dials, .type-areas, .type-objects, .type-dials-title{
 	position: relative;
 	
 }
-.type-dials li, .type-objects li, .type-areas li{
+.type-dials-title{
+	margin-top: 20px;
+}
+.type-dials-title::before,
+.type-dials::before,
+.type-objects::before,
+.type-areas::before{
+	position: absolute;
+	content: "Тип сделки";
+	color: #5B5B5B;
+	font-weight: 300;
+font-size: 12px;
+line-height: 18px;
+top: -20px;
+left: 0;
+
+letter-spacing: 0.02em;
+}
+.type-dials::before{
+	content: "Тип объекта";
+}
+.type-objects::before{
+	content: "Район";
+}
+.type-areas::before{
+	content: "Улица";
+}
+.type-dials-title::after,
+.type-dials::after,
+.type-objects::after,
+.type-areas::after{
+	position: absolute;
+	content: "";
+	top: 20px;
+	right: 20px;
+	width: 12px;
+	height: 7px;
+	background-image: (url(../img/redarrow.png));
+}
+.type-dials li, .type-objects li, .type-areas li, .type-dials-title li{
 	display: none;
 }
 .type-dials.type-dials-opend  p,
 .type-objects.type-objects-opend p,
-.type-areas.type-areas-opend p{
+.type-areas.type-areas-opend p,
+.type-dials-title.type-areas-opend p{
 	margin-bottom: 0;
 	
 	
 }
 .type-dials.type-dials-opend li,
 .type-objects.type-objects-opend li,
-.type-areas.type-areas-opend li{
+.type-areas.type-areas-opend li,
+.type-dials-title.type-areas-opend li{
 	display: block;
 }
 .type-dials.type-dials-opend,
 .type-objects.type-objects-opend,
-.type-areas.type-areas-opend{
+.type-areas.type-areas-opend,
+.type-dials-title.type-areas-opend{
 	
 	position: relative;
 	z-index: 2;
@@ -932,18 +1000,21 @@ color: #FFFFFF;
 }
 .type-dials.type-dials-opend li,
 .type-objects.type-objects-opend li,
-.type-areas.type-areas-opend li{
+.type-areas.type-areas-opend li,
+.type-dials-title.type-areas-opend{
 	text-align: center;
 	cursor: pointer;
 }
 .type-dials li:hover,
 .type-objects li:hover,
-.type-areas li:hover{
+.type-areas li:hover,
+.type-dials-title:hover{
 	color: red;
 }
 .type-dials li,
 .type-objects li,
-.type-areas li{
+.type-areas li,
+.type-dials-title li{
 margin: 0;
 position: relative;
 z-index: 2;
@@ -961,4 +1032,253 @@ padding-left: 12px;
 padding-top: 15px;
 
 color: #0D0D0D;
+}
+.propery-tab .mobile-hidden{
+	display: none;
+	
+}
+.propery-tab{
+	padding-bottom: 20px;
+}
+@media (min-width: 768px){
+	.property-title{
+		display: none;
+	}
+	.property-conainer{
+		min-width: 320px;
+		margin: 0 auto;
+	background: url(..//img/background.png);
+	}
+	.property-tabs{
+		background-color: transparent;
+		width: 768px;
+		margin: 0 auto 0 auto;
+		border-radius: 5px;
+	padding-left: 7px;
+	padding-top: 16px;
+	min-height: 600px;
+	
+	}
+	.type-dials-title::before,
+.type-dials::before,
+.type-objects::before,
+.type-areas::before,
+.type-dials-title::after,
+.type-dials::after,
+.type-objects::after,
+.type-areas::after{
+	display: none;
+}
+.propery-tab span,
+.type-dials p,
+.type-areas p,
+.type-objects p,
+.type-dials-title p{
+	display: block;
+	width: 290px;
+	height: 50px;
+
+border: none;
+box-sizing: border-box;
+
+font-weight: 500;
+font-size: 12px;
+line-height: 16px;
+
+text-align: center;
+padding-left: 12px;
+padding-top: 15px;
+margin-bottom: 33px;
+color: #0D0D0D;
+cursor: pointer;
+background: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
+opacity: 0.7;
+border-radius: 3.60158px;
+}
+.type-dials-title{
+	display: none;
+}
+
+.propery-tab .mobile-hidden{
+	display: block;
+	width: 135.69px;
+height: 74.91px;
+background: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
+opacity: 0.7;
+border-radius: 3.60158px;
+margin-bottom: 0;
+border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+
+}
+.desctop-mode{
+	padding-top: 50px;
+
+	max-height: 275px;
+	display: flex;
+	background: #FFFFFF;
+border-radius: 5px;
+border-bottom-left-radius: 0;
+border-top-left-radius: 0;
+	border-bottom-right-radius: 0;
+}
+.type-dial, .type-object, .type-area {
+	cursor: pointer;
+}
+.type-dials li,
+.type-objects  li,
+.type-areas li{
+	position: relative;
+	display: block;
+	width: 120px;
+height: 50px;
+margin-left: 40px;
+font-weight: 500;
+font-size: 14px;
+line-height: 16px;
+
+color: #0D0D0D;
+}
+.type-areas li{
+	width: 150px;
+}
+.type-dials p,
+.type-objects p,
+.type-areas p{
+	display: none;
+
+}
+.show-menu{
+
+
+display: none;
+}
+.type-container{
+	position: absolute;
+	top: 49px;
+}
+.type-container li{
+	border-bottom: none;
+	border-top: none;
+}
+.type-dials .type-dial-first,
+.type-objects .type-dial-first,
+.type-areas .type-dial-first{
+	position: relative;
+	display: block;
+
+background: #FFFFFF;
+border: 1px solid #EEEEEE;
+box-sizing: border-box;
+border-radius: 3px;
+
+}
+.type-dials .type-dial-first::before,
+.type-objects .type-dial-first:before,
+.type-areas .type-dial-first:before{
+	position: absolute;
+	content: "Тип сделки";
+	top: -30px;
+	left: 0;
+	font-weight: 300;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.02em;
+
+color: #5B5B5B;
+}
+.type-objects .type-dial-first:before{
+	content: "Тип объекта";
+}
+.type-areas .type-dial-first::before{
+	content: "Район";
+}
+.type-dials .type-dial-first::after,
+.type-objects .type-dial-first::after,
+.type-areas .type-dial-first::after{
+	position: absolute;
+	content: "";
+	top: 20px;
+	right: 20px;
+	width: 12px;
+	height: 7px;
+	background-image: (url(../img/redarrow.png));
+}
+.prise input,
+.prises p{
+	margin-left: 20px;
+}
+.prise input,
+.property-area input{ 
+	padding-left: 11px;
+max-width: 80px;
+height: 50px;
+background: #FFFFFF;
+border: 1px solid #EEEEEE;
+box-sizing: border-box;
+border-radius: 3px;
+}
+.advancsd-search{
+	position: relative;
+	display: block;
+	background-color: transparent;
+	border: none;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	width: 162px;
+	margin-right: 30px;
+}
+.advancsd-search:focus{
+	outline: none;
+}
+.advancsd-search::after{
+	content: "";
+	position: absolute;
+	top: 22px;
+	right: -10px;
+	width: 12px;
+	height: 7px;
+	background-image: (url(../img/redarrow.png));
+
+}
+.commercial-property-buttons{
+	position: relative;
+	display: flex;
+	justify-content: flex-end;
+	background: #FFFFFF;
+	border-radius: 5px;
+	color: #0D0D0D;
+	padding-bottom: 100px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
+.show, .show-on-map{
+	width: 200px;
+height: 50px;
+	margin-top: 0;
+	margin-right: 20px;
+}
+.desctop-buttons{
+	display: flex;
+
+}
+.desctop-buttons span{
+	margin-left: 2px;
+	padding: 0;
+	padding-top: 25px;
+}
+.desctop-buttons span:first-child{
+	margin-left: 0;
+}
+.mobile-hidden.desctop-buttons--mod{
+	color: #FF000D;
+	background: #FFFFFF!important;
+	opacity: 1;
+}
+
+
+
+
 }
