--- a/scss/style.scss
+++ b/scss/style.scss
@@ -405,6 +405,7 @@ line-height: 16px;
 	background-color: transparent;
 	
 }
+
 .main-header-search-button:focus,
 .main-header-close-search:focus{
 	outline: none;
@@ -412,9 +413,9 @@ line-height: 16px;
 .main-header-close-search{
 	border: none;
 	background-color: transparent;
-	
 	margin-left: 10px;
 	height: 55px;
+	border: 1px solid red;
 
 }
 .main-header-close-search img{
@@ -435,7 +436,7 @@ line-height: 16px;
 		height: 116px;
 			padding-left: 0;
 	}
-	.button-search{
+	.button-search, .main-header-close-search{
 		display: none;
 	}
 .main-header-logo {
@@ -555,19 +556,6 @@ box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
 .menu-lists a{
 	color: #3F3D4A;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 .main-search-button{
 
 	display: block;
@@ -588,7 +576,7 @@ box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
 	}
 
 	.main-header-search-button{
-
+		
 		right: 10px;
 		top: 13px;
 	
@@ -768,141 +756,158 @@ cursor: pointer;
 }
 // блок табов недвижимости
 
-.main-property-conainer{
+.property{
 	width: 100%;
-	margin: 0 auto;
-
-	background: radial-gradient(42.82% 211.01% at 29.11% 38.17%, rgba(0, 225, 212, 0.3) 0%, rgba(0, 9, 95, 0.3) 100%);
-	// background-image: url(..//img/mobile-background.png);
+	background-image: url(../img/mobile-background.png);
+	background-size: cover;
 	background-repeat: no-repeat;
-}
-.property-conainer{
-	min-width: 320px;
-	margin: 0 auto;
-background: url(..//img/mobile-background.png) no-repeat center top fixed;
--webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-     background-size: cover;
-
-background-size: cover;
+	padding-bottom: 20px;
 }
 .property-title{
-	
-	padding-top: 20px;
-	margin-left: 20px;
-	margin-bottom: 70px;
-}
-.property-title h2{
 	margin: 0 auto;
-	width: 290px;
-	font-style: normal;
-font-weight: bold;
+	font-weight: bold;
 font-size: 25px;
 line-height: 30px;
-/* or 120% */
+width: 288px;
+padding-top: 25px;
 
 letter-spacing: -0.02em;
-
+margin-bottom: 12px;
 color: #FFFFFF;
 }
-.property-title p{
+.property-text{
+	
 	margin: 0 auto;
-	max-width: 290px;
-	font-style: normal;
-font-weight: 300;
+	width: 288px;
+	font-weight: 300;
 font-size: 14px;
 line-height: 24px;
 /* or 171% */
 
-
+margin-bottom: 69px;
 color: #FFFFFF;
 }
-.property-tabs{
-	background-color: #FFFFFF;
-	width: 305px;
+.property-container{
 	margin: 0 auto;
-	border-radius: 5px;
-padding-left: 7px;
-padding-top: 16px;
-min-height: 600px;
+background: #FFFFFF;
+border-radius: 5px;
+width: 305px;
+min-height: 546px;
+padding-bottom: 50px;
 
 }
 
-.propery-tab span,
-.type-dials p,
-.type-areas p,
-.type-objects p,
-.type-dials-title p{
-	display: block;
-	width: 290px;
-	height: 50px;
-	background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
-border-radius: 3px;
-font-weight: 500;
-font-size: 12px;
-line-height: 14px;
-text-align: left;
-padding-left: 12px;
-padding-top: 15px;
-margin-bottom: 33px;
-color: #0D0D0D;
-cursor: pointer;
+.choose-property-container{
+	padding-top: 16px;
 }
-.prises,
-.property-areas{
-	position: relative;
-	width: 290px;
-	margin-bottom: 33px;
-
-}
-.prises p,
-.property-areas p{
-	position: absolute;
-	top: -25px;
+.choose-property-container p{
 	font-weight: 300;
 font-size: 12px;
 line-height: 18px;
 letter-spacing: 0.02em;
 color: #5B5B5B;
+margin-left: 9px;
 }
+.choose-property{
+	position: relative;
+width: 290px;
+height: 50px;
+overflow: hidden;
+background: #FFFFFF;
+border: 1px solid #EEEEEE;
+box-sizing: border-box;
+border-radius: 3px;
+margin-left: 7px;
+}
+.choose-property::after{
+	position: absolute;
+	content: "";
+	width: 15px;
+	height: 15px;
+	top: 20px;
+	right: 20px;
+	background-image: url(../img/redarrow.png);
+	background-repeat: no-repeat;
+}
+.commercial{
+width: 100%;
+height: 50px;
+background: #FFFFFF;
 
-.prise,
-.property-area{
-	display: inline-block;
+box-sizing: border-box;
+border-radius: 3px;
+margin-top: 18px;
+margin-left: 12px;
+font-weight: 500;
+font-size: 12px;
+line-height: 14px;
 }
-.prise input,
-.property-area input{ 
-	padding-left: 11px;
-max-width: 141px;
+.prices, .area {
+	margin-left: 9px;
+	margin-top: 10px;
+}
+.prices div,
+.area div{
+	margin-bottom: 5px;
+	font-weight: 300;
+	font-size: 12px;
+	line-height: 18px;
+	/* or 150% */
+	
+	letter-spacing: 0.02em;
+	
+	color: #5B5B5B;
+	
+}
+.prices input,
+.area input{
+	width: 139px;
 height: 50px;
 background: #FFFFFF;
 border: 1px solid #EEEEEE;
 box-sizing: border-box;
 border-radius: 3px;
+
+padding-left: 11px;
 }
-.prise input::placeholder,
-.property-area input::placeholder{
+.prices input::placeholder,
+.area input::placeholder{
+	color: #0D0D0D;
+	font-weight: 500;
+font-size: 12px;
+line-height: 14px;
+}
+.advansed-search:first-child{
+	display: none;
+}
+.show{
+	margin-left: 7px;
+	width: 290px;
+	height: 50px;
+	background: #FF000D;
+	border-radius: 4px;
+	margin-top: 10px;
+	border: none;
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 14px;
+	text-align: center;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
 	
-	color: #0D0D0D;	
+	color: #FFFFFF;
 }
-.advancsd-search{
-	display: none;
-}
-.show-on-map,
-.show{
+.show-on-map{
+	
+	margin-left: 7px;
+	margin-top: 20px;
 	width: 290px;
 	height: 50px;
 	border: 1px solid #0D0D0D;
-	box-sizing: border-box;
-	border-radius: 4px;	
-	background-color: transparent;
-	font-weight: 500;
+box-sizing: border-box;
+border-radius: 4px;
+background-color: transparent;
+font-weight: 500;
 font-size: 12px;
 line-height: 14px;
 text-align: center;
@@ -910,375 +915,197 @@ letter-spacing: 0.05em;
 text-transform: uppercase;
 
 color: #0D0D0D;
+
+
 }
 .show-on-map:hover{
 	color: #FF000D;
 }
 .show:hover{
-	color: #000000;
+	color: #0D0D0D;
 }
-.show{
-	margin-top: 10px;
-background: #FF000D;
-border-radius: 4px;
-color: #FFFFFF;
-
-}
-.show-on-map:focus,
-.show:focus{
-	outline: none;
-}
-
-.type-dials, .type-areas, .type-objects, .type-dials-title{
-	position: relative;
-	
-}
-.type-dials-title{
-	margin-top: 20px;
-}
-.type-dials-title::before,
-.type-dials::before,
-.type-objects::before,
-.type-areas::before{
-	position: absolute;
-	content: "Тип сделки";
-	color: #5B5B5B;
-	font-weight: 300;
-font-size: 12px;
-line-height: 18px;
-top: -20px;
-left: 0;
-
-letter-spacing: 0.02em;
-}
-.type-dials::before{
-	content: "Тип объекта";
-}
-.type-objects::before{
-	content: "Район";
-}
-.type-areas::before{
-	content: "Улица";
-}
-.type-dials-title::after,
-.type-dials::after,
-.type-objects::after,
-.type-areas::after{
-	position: absolute;
-	content: "";
-	top: 20px;
-	right: 20px;
-	width: 12px;
-	height: 7px;
-	background-image: (url(../img/redarrow.png));
-}
-.type-dials li, .type-objects li, .type-areas li, .type-dials-title li{
+.mobile-mod{
 	display: none;
-}
-.type-dials.type-dials-opend  p,
-.type-objects.type-objects-opend p,
-.type-areas.type-areas-opend p,
-.type-dials-title.type-areas-opend p{
-	margin-bottom: 0;
-	
-	
-}
-.type-dials.type-dials-opend li,
-.type-objects.type-objects-opend li,
-.type-areas.type-areas-opend li,
-.type-dials-title.type-areas-opend li{
-	display: block;
-}
-.type-dials.type-dials-opend,
-.type-objects.type-objects-opend,
-.type-areas.type-areas-opend,
-.type-dials-title.type-areas-opend{
-	
-	position: relative;
-	z-index: 2;
-	box-shadow: 0px 5px 5px #000;
-}
-.type-dials.type-dials-opend li,
-.type-objects.type-objects-opend li,
-.type-areas.type-areas-opend li,
-.type-dials-title.type-areas-opend{
-	text-align: center;
-	cursor: pointer;
-}
-.type-dials li:hover,
-.type-objects li:hover,
-.type-areas li:hover,
-.type-dials-title:hover{
-	color: red;
-}
-.type-dials li,
-.type-objects li,
-.type-areas li,
-.type-dials-title li{
-margin: 0;
-position: relative;
-z-index: 2;
-width: 290px;
-height: 50px;
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
-border-radius: 3px;
-font-weight: 500;
-font-size: 12px;
-line-height: 14px;
-text-align: left;
-padding-left: 12px;
-padding-top: 15px;
-
-color: #0D0D0D;
-}
-.propery-tab .mobile-hidden{
-	display: none;
-	
-}
-.propery-tab{
-	padding-bottom: 20px;
 }
 @media (min-width: 768px){
-	.property-title{
-		display: none;
+	.property{
+		background-image: url(../img/backgroundTablet.png);
+		background-size: 100%;
+		height: 500px;
 	}
-	.property-conainer{
-		min-width: 320px;
-		margin: 0 auto;
-	background: url(..//img/background.png);
-	}
-	.property-tabs{
-		background-color: transparent;
-		width: 768px;
-		margin: 0 auto 0 auto;
-		border-radius: 5px;
-	padding-left: 7px;
-	padding-top: 16px;
-	min-height: 600px;
-	
-	}
-	.type-dials-title::before,
-.type-dials::before,
-.type-objects::before,
-.type-areas::before,
-.type-dials-title::after,
-.type-dials::after,
-.type-objects::after,
-.type-areas::after{
+.property-title,
+.property-text{
 	display: none;
 }
-.propery-tab span,
-.type-dials p,
-.type-areas p,
-.type-objects p,
-.type-dials-title p{
+.mobile-mod{
 	display: block;
-	width: 290px;
-	height: 50px;
+}
+.property-container{
+	width: 768px;
+	background-color: transparent;
 
+}
+.dont-show{
+	display: none;
+}
+.choose-property.desctop-mod{
+	position: relative;
+width: 545px;
+height: auto;
 border: none;
-box-sizing: border-box;
+display: flex;
+background-color: transparent;
+}
 
+.choose-property.desctop-mod::after{
+	display: none;
+}
+.desctop-mod .commercial{
+	width: 135.69px;
+	height: 74.91px;
+	background:rgba(255, 255, 255, 0.7);
+	padding-top: 21px;
+	border-radius: 3.60158px;
+	text-align: center;
+letter-spacing: 0.02em;
+margin-left: 1px;
+}
+.commercial.color-mod{
+	background-color: #FFFFFF;
+	
+}
+.commercial.color-mod span{
+	color: #FF000D;
+}
+.desctop-mod .commercial:first-child{
+	margin-left: 0px;
+	border-bottom-left-radius: 0px;
+}
+.commercial span{
+	display: block;
+	font-style: normal;
 font-weight: 500;
 font-size: 12px;
 line-height: 16px;
-
-text-align: center;
-padding-left: 12px;
-padding-top: 15px;
-margin-bottom: 33px;
-color: #0D0D0D;
-cursor: pointer;
-background: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
-opacity: 0.7;
-border-radius: 3.60158px;
-}
-.type-dials-title{
-	display: none;
-}
-
-.propery-tab .mobile-hidden{
-	display: block;
-	width: 135.69px;
-height: 74.91px;
-background: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
-opacity: 0.7;
-border-radius: 3.60158px;
-margin-bottom: 0;
-border-bottom-left-radius: 0;
-	border-bottom-right-radius: 0;
-
-}
-.desctop-mode{
-	padding-top: 50px;
-
-	max-height: 275px;
-	display: flex;
-	background: #FFFFFF;
-border-radius: 5px;
-border-bottom-left-radius: 0;
-border-top-left-radius: 0;
-	border-bottom-right-radius: 0;
-}
-.type-dial, .type-object, .type-area {
-	cursor: pointer;
-}
-.type-dials li,
-.type-objects  li,
-.type-areas li{
-	position: relative;
-	display: block;
-	width: 120px;
-height: 50px;
-margin-left: 40px;
-font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-
-color: #0D0D0D;
-}
-.type-areas li{
-	width: 150px;
-}
-.type-dials p,
-.type-objects p,
-.type-areas p{
-	display: none;
-
-}
-.show-menu{
-
-
-display: none;
-}
-.type-container{
-	position: absolute;
-	top: 49px;
-}
-.type-container li{
-	border-bottom: none;
-	border-top: none;
-}
-.type-dials .type-dial-first,
-.type-objects .type-dial-first,
-.type-areas .type-dial-first{
-	position: relative;
-	display: block;
-
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
-border-radius: 3px;
-
-}
-.type-dials .type-dial-first::before,
-.type-objects .type-dial-first:before,
-.type-areas .type-dial-first:before{
-	position: absolute;
-	content: "Тип сделки";
-	top: -30px;
-	left: 0;
-	font-weight: 300;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.02em;
-
-color: #5B5B5B;
-}
-.type-objects .type-dial-first:before{
-	content: "Тип объекта";
-}
-.type-areas .type-dial-first::before{
-	content: "Район";
-}
-.type-dials .type-dial-first::after,
-.type-objects .type-dial-first::after,
-.type-areas .type-dial-first::after{
-	position: absolute;
-	content: "";
-	top: 20px;
-	right: 20px;
-	width: 12px;
-	height: 7px;
-	background-image: (url(../img/redarrow.png));
-}
-.prise input,
-.prises p{
-	margin-left: 20px;
-}
-.prise input,
-.property-area input{ 
-	padding-left: 11px;
-max-width: 80px;
-height: 50px;
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
-border-radius: 3px;
-}
-.advancsd-search{
-	position: relative;
-	display: block;
-	background-color: transparent;
-	border: none;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 16px;
-	width: 162px;
-	margin-right: 30px;
-}
-.advancsd-search:focus{
-	outline: none;
-}
-.advancsd-search::after{
-	content: "";
-	position: absolute;
-	top: 22px;
-	right: -10px;
-	width: 12px;
-	height: 7px;
-	background-image: (url(../img/redarrow.png));
-
-}
-.commercial-property-buttons{
-	position: relative;
-	display: flex;
-	justify-content: flex-end;
-	background: #FFFFFF;
-	border-radius: 5px;
 	color: #0D0D0D;
-	padding-bottom: 100px;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
+
+	
 }
 
-.show, .show-on-map{
-	width: 200px;
-height: 50px;
-	margin-top: 0;
-	margin-right: 20px;
+.commercial:nth-child(2) span{
+	margin: 0 auto;
+	max-width: 80px;
 }
-.desctop-buttons{
-	display: flex;
-
+.commercial:nth-child(3) span{
+	margin: 0 auto;
+	max-width: 80px;
 }
-.desctop-buttons span{
-	margin-left: 2px;
-	padding: 0;
-	padding-top: 25px;
+.commercial:nth-child(4) span{
+	margin: 0 auto;
+	max-width: 80px;
 }
-.desctop-buttons span:first-child{
+.choose-property-shoosen-container{
+	border-top-right-radius: 5px;
+	border-top-left-radius:  5px;
+	background-color: #FFFFFF;
+}
+.choose-property.desctop-mod{
 	margin-left: 0;
 }
-.mobile-hidden.desctop-buttons--mod{
-	color: #FF000D;
-	background: #FFFFFF!important;
-	opacity: 1;
+.choose-property{
+width: 170px;
+height: 50px;
 }
+.choose-property.width-mod{
+	width: 130px;
+	}
+.choose-property-shoosen-container{
+	display: flex;
+	margin: 0 auto;
+	width: 768px;
+	margin-top: -5px;
+	min-height: 105px;
+}
+.prices{
+	margin-left: 30px;
+}
+.prices input, .area input{
+	width: 60px;
+	height: 50px;
+}
+.choose-property-buttons{
+	display: flex;
+	margin-top: -4px;
+	justify-content: flex-end;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+	background-color: #FFFFFF;
+	padding-bottom: 24px;
+	border-radius: 5px;
+}
+.show-on-map, .show{
+	margin-top: 0;
+	width: 200px;
+}
+.show{
+	margin-right: 24px;
+}
+}
+@media (min-width: 1350px){
+	.property{
+		background-image: url(../img/backgroundTablet.png);
+		background-size: 100%;
+		height: 500px;
+	}
 
+.property-container{
+	width: 1350px;
+}
+.choose-property.desctop-mod{
+	position: relative;
+width: 752px;
+}
+.choose-property-shoosen-container{
+	width: 1350px;
+}
+.choose-property-container {
+	padding-top: 36px;
 
-
-
+}
+.choose-property-container.mobile-mod{
+	margin-left: 40px;
+}
+.choose-property.width-mod{
+	width: 160px;
+	}
+	.choose-property.width-mod2{
+		width: 270px;
+		}
+		.prices{
+			
+			margin-left: 92px;
+		}
+		.prices, .area{
+			margin-top: 34px;
+		}
+		.prices input, .area input{
+			width: 99px;
+height: 50px;
+		}
+		.advansed-search:first-child{
+			display: block;
+		}
+		.choose-property-buttons{
+			padding-top: 20px;
+			padding-bottom: 24px;
+			border-radius: 5px;
+		}
+		.show-on-map, .show{
+			margin-top: 0;
+			width: 200px;
+height: 50px;
+		}
+		.show{
+			margin-right: 24px;
+		}
 }
