--- a/scss/style.scss
+++ b/scss/style.scss
@@ -833,7 +833,7 @@ margin-left: 7px;
 width: 100%;
 height: 50px;
 background: #FFFFFF;
-
+cursor: pointer;
 box-sizing: border-box;
 border-radius: 3px;
 margin-top: 18px;
@@ -1094,6 +1094,31 @@ height: 50px;
 		}
 		.advansed-search:first-child{
 			display: block;
+			position: relative;
+			border: none;
+			background-color: transparent;
+			font-weight: 500;
+font-size: 14px;
+line-height: 16px;
+margin-right: 7px;
+padding-right: 25px;
+color: #0D0D0D;
+
+		}
+		.advansed-search:first-child:focus{
+			outline: none;
+		}
+		.advansed-search:first-child:after{
+position: absolute;
+content: "";
+width: 15px;
+	height: 15px;
+	top: 20px;
+	right: 0px;
+	background-image: url(../img/redarrow.png);
+	background-repeat: no-repeat;
+	
+
 		}
 		.choose-property-buttons{
 			padding-top: 20px;
@@ -1103,9 +1128,12 @@ height: 50px;
 		.show-on-map, .show{
 			margin-top: 0;
 			width: 200px;
-height: 50px;
+			height: 50px;
+		}
+		.show-on-map{
+			margin-right: 3px;
 		}
 		.show{
-			margin-right: 24px;
+			margin-right: 85px;
 		}
 }
