--- a/scss/style.scss
+++ b/scss/style.scss
@@ -599,7 +599,7 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
-	z-index: 3;
+	z-index: 99999999999999999;
 }
 
 .modal-call-back__content {
